# GamesmanClassic

./: .gitignore  .gitmodules  Brewfile  CONTACTS  Dockerfile  README  build.sh  c  config_run.sh  configure.ac  configure.ac~  delete_me.css  doc-config  doxygen-config  gamesman-classic  gamesman-classic.service  key  key.pub  requirements.txt
CVSROOT/: bugz.txt  checkoutlist  cvswrappers  logBugData.pl  loginfo  rcsinfo
Fa21ParallelSolver/: C4 results.txt  Connect4.c  Game.h  main.c  maindriver.c  maindrivermpi.c  maindriveropenmp.c  maindriversinglethreaded.c  make.txt  makempi.sh  makempi.txt  makeopenmp.txt  makesinglethreaded.sh  maketestmemory.sh  memory.h  memoryfastretrieval.c  memorylessoptimizedmanualtier.c  memorymoreoptimized.c  memorynaive.c  memoryoptimized.c  memorytier.h  memorywithplayer.c  mpi-run.sh  solver.c  solver.h  solvermpiinitial.c  solversinglethreaded.c  solverv1.c
GamesmanLightServer/: 1210
GamesmanLightServer/nbproject/: genfiles.properties  project.properties  project.xml
bitmaps/: GamesCrafters2004FaNamesSmall.pnm  GamesCrafters2005FaNamesSmall.ppm  X.xbm  XPlus.xbm  blank.xbm  krusty.xbm  plus.xbm
doc/: Memwatch.tex  README.md  build-configuration-options.md  build-instructions-linux.md  build-instructions-macos-m1.md  build-instructions-macos.md  build-instructions-rhel.md  build-instructions-ubuntu-debian.md  build-instructions-windows-cygwin.md  build-instructions-windows-wsl.md  build-instructions-windows.md  doxygen-config  doxygen-layout  export_format.txt  gamesdb_arch.doc  generic_hash_symmetries.doc  gui_changes.tex  newgame.txt  reserved.txt
doc/files/: Interestingness.tex  Website_analysis_display.tex  WinBy.tex  generic_hash_api.tex  gui_changes.tex  levelfile.tex  newgame.txt  reserved.txt  status.txt  text_parsing.tex  tiergamesman.txt
doc/meta/: DocumentationProcess.doc
gamesman/: BUGS  CONTACTS  INSTALL  Makefile.in  README  RESERVED  chmod-X-scripts  configure  configure.ac  mlewth.tcl
gamesman/bitmaps/: GamesCrafters2005SpNames.ppm  O.xbm  README  circle.xbm  static_blank.ps  static_legend.ps  static_oxy.ps
gamesman/doc/: CanonicalsTutorial.ppt  Symmetries.ppt  UsingTierGamesman.doc  d1210.txt  d3spot.txt  dabalone.txt  dachi.txt  dasalto.txt  dchange.txt  dcmass.txt  dcon.txt  dctoi.txt  ddao.txt  ddnb.txt  ddodegm.txt  dfoxes.txt  dlgame.txt  dlite3.txt  dnim.txt  dqx.txt  drubix.txt  dsim.txt  dslideN.txt  dstt.txt  dtactix.txt  dttt3.txt  dwin4.txt  gamesdb_arch.doc  generic_hash_api.tex  levelfile.tex  reserved.txt  status.txt  text_parsing.tex  tiergamesman.txt
gamesman/java/: Makefile.in  db.c  db.h  gameplay.c  globals.c  globals.h  httpclient.c  httpclient.h  main.c  netdb.c  networkdb.c
gamesman/meta/: 1210.grf  README  README-blk  default.blk  default.grf  errNoChild.grf  goagain.grf
gamesman/src/: .project  Makefile  Makefile.in  client.c  gamesman-old.h  gamesman.c  gamesman.h  hash.c  hash.h  hashapi.txt  howto.txt  loopygasolver.c  loopyupsolver.c  loopyupsolver.h  m1210.c  m1ton.c  m369mm.c  m3dot.c  m3spot.c  m6mm.c  m9mm.c  mLgame.c  mabalone.c  machi.c  mago.c  masalto.c  mataxx.c  mbaghchal.c  mblocking.c  mcambio.c  mchange.c  mcmass.c  mcon.cc  mctoi.c  mdao.c  mdinododgem.c  mdnb.cc  mdodgem.c  mdodgemhash.c  mfandan.c  (+68 more)
gamesman/tcl/: InitWindow.tcl  README  gamesman.tcl  gamesman3.tcl  gamesman3abalone.tcl  gamesman3dot.tcl  gamesmancmass.tcl  gamesmanfoxes.tcl  gamesmanmcon.tcl  gamesmanmctoi.tcl  gamesmanmdnb.tcl  gamesmanmsim.tcl  gamesmanmstt.tcl  handlefgclick.old.tcl  html_library.tcl  htmldoc.tcl  m1210.tcl  m12102.tcl  m369mm.tcl  m3dot.tcl  m3spot.tcl  m6mm.tcl  mLgame.tcl  mabalone.tcl  machi.tcl  masalto.tcl  mbaghchal.tcl  mchange.tcl  mcmass.tcl  mcon.tcl  mctoi.tcl  mdao.tcl  mdinododgem.tcl  mdnb.tcl  mdodgem.tcl  mfandan.tcl  mfoxes.tcl  mfoxessubs.tcl  mhshogi.tcl  miceblocks.tcl  (+30 more)
java/: gameplay.c  httpclient.h
java/gui/: Makefile.in  configure.ac
java/gui/game/: Board.java  Position.java  Value.java
java/gui/main/: CInterface.java
java/gui/patterns/: Place.java
java/gui/renderers/: GridPositionRenderer.java
java/gui/xml/: dao.xml
lib/: README
meta/: 1210rv.grf  1210tie.grf  README  classes.blk  default.blk  errChildGone.grf  goagain.grf  loopySelf.grf  loopyTie.grf  loopyWin.grf
misc/: README.md
misc/GamesmanLightServer/: build.xml
misc/java/: httpclient.c  httpclient.h  netdb.c  netdb.h
misc/ppb/: ppb.py
ppb/: 10-to-0.py  ppb.py
src/: Makefile.in  client.c  gamesman.h  gamesman.py  geany_run_script.sh  m1210.c  m1dchess.c  m1ton.c  m369mm.c  m3spot.c  mLgame.c  mabalone.c  mabrobad.c  machi.c  madugo.c  mago.c  mainpage.h  mallqueenschess.c  masalto.c  mataxx.c  mbaghchal.c  mbeeline.c  mblocking.c  mcambio.c  mcatchthelion.c  mchange.c  mchomp.c  mchopsticks.c  mcmass.c  mcombs.c  mcon.cc  mconnect4.c  mconnect4twist.c  mconnections.c  mctoi.c  mdao.c  mdinododgem.c  mdnb.cc  mdodgem.c  mdodgemhash.c  (+96 more)
src/EXPERIMENT/: client.c  m1210.c  m369mm.c  machi.c  mago.c  mataxx.c  mblocking.c  mchange.c  mcmass.c  mdao.c  mdinododgem.c  mdodgemhash.c  mgraph.c  mhorse.c  migo.c  migo.t.c  mloa.c  mpylos.c  mrcheckers.c  mseega.c  mslideN.c  msquaredance.c  mswans.c  mtemplate.c  mtore.c  mtttier.c
src/Puzzle/: DatabaseWriter.py  FCG.py  LO.py  PegSolitaireTester.py  Puzzle.py  Rubik.txt  SlideNAnalyzer.py  SlideNTester.py  Solver.py  (+11 more)
tcl/: InitWindow.tcl  gamesman.tcl  gamesman3.tcl  gamesman3abalone.tcl  gamesman3spot.tcl  gamesman_old.tcl  gamesmancmass.tcl  gamesmanfoxes.tcl  gamesmanjoust.tcl  gamesmanmcon.tcl  gamesmanmdnb.tcl  gamesmanmsim.tcl  gamesmannotalex.tcl  gamesmanrelease.tcl  html_library.tcl  m1210.tcl  m12102.tcl  m369mm.tcl  mLgame.tcl  machi.tcl  masalto.tcl  mbaghchal.tcl  mchange.tcl  mcmass.tcl  mcon.tcl  mcon_bronze.tcl  mctoi.tcl  mctoi.tcl.silver  mdao.tcl  mdinododgem.tcl  mdnb.tcl  mdodgem.tcl  mfoxes.tcl  mhshogi.tcl  miceblocks.tcl  mjoust.tcl  mjoustxtra.tcl  mkono.tcl  mlewth.tcl  mlgame3.tcl  (+17 more)
thrift/: server.py
xml_resource_test/: README  lang_test.c  makefile  resource.dtd  tres.c  tres.h  tres_test.c
(+871 files in other folders)
